--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,36 @@
 <mat-toolbar>
+  <div fxShow="true" fxHide.gt-sm="true">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
   <span>Formula Stats</span>
-  <button mat-flat-button class="navBarButton" routerLink="/Home" routerLinkActive="active" >Home</button>
-  <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Driver Stats</button>
-  <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Team Stats</button>
-  <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Track stats</button>
-  <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Head to Head</button>
+  <div fxShow="true" fxHide.lt-md="true">
+    <button mat-flat-button class="navBarButton" routerLink="/Home" routerLinkActive="active" >Home</button>
+    <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Driver Stats</button>
+    <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Team Stats</button>
+    <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Track stats</button>
+    <button mat-flat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Head to Head</button>
+  </div>
   <span class="spacer"></span>
-  <a mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
-    <mat-icon [svgIcon]="'github'"></mat-icon>
-  </a>
+    <a mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
+      <mat-icon [svgIcon]="'github'"></mat-icon>
+    </a>
 </mat-toolbar>
-<router-outlet class="center"></router-outlet>
+
+
+<mat-sidenav-container fxFlexFill>
+  <mat-sidenav #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
+  <div fxLayout="column">
+    <button mat-button class="navBarButton" routerLink="/Home" routerLinkActive="active" >Home</button>
+    <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Driver Stats</button>
+    <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Team Stats</button>
+    <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Track stats</button>
+    <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Head to Head</button>
+  </div>
+  </mat-sidenav>
+  <mat-sidenav-content fxFlexFill>
+    <router-outlet class="center"></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
