add country flag next to GP name

--- a/src/app/race-boxes/race-box/race-box.component.html
+++ b/src/app/race-boxes/race-box/race-box.component.html
@@ -3,7 +3,7 @@
     <div class="raceInfo">
         <div class="raceInfoLeft">
             <h2>Track</h2>
-                <p> {{gpFlag}} {{trackName}}</p>
+                <p><span class="fi fi-{{gpFlag | lowercase}}"></span> {{trackName}}</p>
             <h2>Round</h2>
                 <p>{{round}}</p>
             <h2>Date</h2>
