--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 
 
 <mat-sidenav-container fxFlexFill>
-  <mat-sidenav #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
+  <mat-sidenav #sidenav fixedTopGap="56" fixedInViewport="true"  fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
   <div fxLayout="column">
     <button mat-button class="navBarButton" routerLink="/Home" routerLinkActive="active" >Home</button>
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Driver Stats</button>
