--- a/src/app/race-boxes/standings-box/standings-box.component.html
+++ b/src/app/race-boxes/standings-box/standings-box.component.html
@@ -1,7 +1,8 @@
-<div class="raceBox" >
+<mat-card class="raceBox" >
+  <mat-card-content>
     <h1> {{displayedStandings}} Standings!</h1>
     <div class="seasonStandings">
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table class="mat-table" [dataSource]="dataSource">
             <!-- <ng-container matColumnDef="teamBadge">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element"> {{element}} </td>
@@ -29,9 +30,9 @@
         </table>
     </div>
     <h2></h2>
-    <div class="buttons">
-      <button mat-raised-button (click)="changeStandings()">Drivers/Teams Standings</button>
-      <button mat-raised-button [routerLink]="'/ComingSoon'" routerLinkActive="active">See more season info!</button>
-    </div>
-    
-</div>
+    <mat-card-actions>
+      <button mat-raised-button class="mat-primary" (click)="changeStandings()">Drivers/Teams Standings</button>
+      <button mat-raised-button class="mat-primary" [routerLink]="'/ComingSoon'" routerLinkActive="active">See more season info!</button>
+    </mat-card-actions>
+  </mat-card-content>
+  </mat-card>
