--- a/src/app/race-boxes/standings-box/standings-box.component.scss
+++ b/src/app/race-boxes/standings-box/standings-box.component.scss
@@ -2,10 +2,13 @@
     display: flex;
     flex-direction: column;
     margin: 1rem;
-    padding: 0.6.25rem;
-    border: 0.063rem solid #000000;
+    padding: 1rem;
     border-radius: 0.313rem;
-    background-color: #ffffff;
+}
+
+.mat-table
+{
+  background-color:transparent!important;  
 }
 
 .seasonStandings {
@@ -14,6 +17,6 @@
     overflow-y: scroll;
 }
 
-.buttons {
-    flex: 1;
+.mat-mdc-button-base {
+    margin-left: 0.5rem;
 }
