--- a/src/app/race-boxes/standings-box/standings-box.component.html
+++ b/src/app/race-boxes/standings-box/standings-box.component.html
@@ -1,6 +1,6 @@
 <mat-card class="raceBox" >
   <mat-card-content>
-    <h1> {{displayedStandings}} Standings!</h1>
+    <mat-card-title> {{displayedStandings}} Standings!</mat-card-title>
     <div class="seasonStandings">
         <table mat-table class="mat-table" [dataSource]="dataSource">
             <!-- <ng-container matColumnDef="teamBadge">
