--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,14 @@
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Head to Head</button>
   </div>
   <span class="spacer"></span>
-    <a mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
+  <button mat-icon-button (click)="toggleTheme()" matTooltip="Toggle dark theme" class="theme-button dark-mode">
+    <mat-icon>
+      brightness_6
+    </mat-icon>
+  </button>
+    <button mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
       <mat-icon [svgIcon]="'github'"></mat-icon>
-    </a>
+    </button>
 </mat-toolbar>
 
 
