--- a/src/app/coming-soon/coming-soon.component.html
+++ b/src/app/coming-soon/coming-soon.component.html
@@ -1,11 +1,15 @@
-<div class="genericCentreContent">
-    <h1>Coming Soon!</h1>
-    <img src="assets/svg/cone.svg" height="60%" width="40%" alt="coming soon"/>
-    <p>We are working on this feature! If you are interested in contributing,
-     raising a bug or just checking on our progress then please visit our
-     github link below!
-    </p>
-    <button mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
-        <mat-icon [svgIcon]="'github'"></mat-icon>
-    </button>
+<div class="center">
+    <mat-card class="coming-soon-card">
+        <mat-card-content>
+        <mat-card-title>Coming Soon!</mat-card-title>
+        <img mat-card-image src="assets/svg/cone.svg" height="40%" width="20%" alt="coming soon"/>
+        <p>We are working on this feature! If you are interested in contributing,
+        raising a bug or just checking on our progress then please visit our
+        github link below!
+        </p>
+            <button mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
+            <mat-icon [svgIcon]="'github'"></mat-icon>
+            </button>
+    </mat-card-content>
+    </mat-card>
 </div>
