--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,6 +1,10 @@
-<div class="genericCentreContent">
-    <h1>404!</h1>
-    <img src="assets/svg/redflag.svg" width="30%" height="50%" alt="404"/>
-    <p>Sorry, we could not find this page :(</p>
+<div class="center">
+    <mat-card class="not-found-card">
+        <mat-card-content>
+            <mat-card-title>404!</mat-card-title>
+            <img mat-card-image src="assets/svg/redflag.svg" width="35%" height="55%" alt="404"/>
+            <p>Sorry, we could not find this page :(</p>
+        </mat-card-content>
+    </mat-card>
 </div>
 
