--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
   </div>
   </mat-sidenav>
   <mat-sidenav-content fxFlexFill>
-    <router-outlet class="center"></router-outlet>
+    <router-outlet class=""></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
 
