--- a/src/app/coming-soon/coming-soon.component.html
+++ b/src/app/coming-soon/coming-soon.component.html
@@ -7,9 +7,9 @@
         raising a bug or just checking on our progress then please visit our
         github link below!
         </p>
-            <button mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
+            <a mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
             <mat-icon [svgIcon]="'github'"></mat-icon>
-            </button>
+            </a>
     </mat-card-content>
     </mat-card>
 </div>
