--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,9 @@
       brightness_6
     </mat-icon>
   </button>
-    <button mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
+    <a mat-icon-button aria-label="github" href="https://github.com/ElliottDG/F1-Stats" target="_blank">
       <mat-icon [svgIcon]="'github'"></mat-icon>
-    </button>
+      </a>
 </mat-toolbar>
 
 
