--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <div class="mat-headline">Formula Stats</div>
   <div fxShow="true" fxHide.lt-md="true">
     <button mat-button class="navBarButton" routerLink="/Home" routerLinkActive="active" >Home</button>
+    <button mat-button class="navBarButton" routerLink="/Standings" routerLinkActive="active" >Standings</button>
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Driver Stats</button>
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Team Stats</button>
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Track stats</button>
@@ -28,6 +29,7 @@
   <mat-sidenav #sidenav fixedTopGap="56" fixedInViewport="true"  fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
   <div fxLayout="column">
     <button mat-button class="navBarButton" routerLink="/Home" routerLinkActive="active" >Home</button>
+    <button mat-button class="navBarButton" routerLink="/Standings" routerLinkActive="active" >Standings</button>
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Driver Stats</button>
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Team Stats</button>
     <button mat-button class="navBarButton" routerLink="/ComingSoon" routerLinkActive="active" >Track stats</button>
