--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
             [fastestLapPrevInfo]="fastestLapNextInfoLastSeason" [numOfRaces]="numOfRaces"
             [season]="seasonPrev" [prev]=true [raceToDisplay]="next"></app-race-box>
             <app-schedule-race-box class="raceBox" [nextRace]="nextRace" [numOfRaces]="numOfRaces"></app-schedule-race-box>
-            <app-standings-box class="raceBox" [driverStandings]="currDriverStandings" [teamStandings]="currTeamStandings"></app-standings-box>
+            <app-standings-box class="raceBox standingsBox" [driverStandings]="currDriverStandings" [teamStandings]="currTeamStandings"></app-standings-box>
     </div>
 
     <div id="more-info">
