--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,5 +24,9 @@
     flex-flow: column wrap;
 }
 
+.standingsBox ::ng-deep .seasonStandings{
+    max-height: 18.688rem;
+    overflow-y: scroll;
+}
 
 
