Add standings page with functionality
fix tests

--- a/src/app/standings/all-standings/all-standings.component.html
+++ b/src/app/standings/all-standings/all-standings.component.html
@@ -1,4 +1,4 @@
-<mat-card class="">
+<mat-card class="standingsCard">
     <mat-card-header>
         <mat-card-title> {{standings}} Standings!</mat-card-title>
         <mat-card-subtitle> {{season}} </mat-card-subtitle>
