--- a/src/app/race-boxes/standings-box/standings-box.component.html
+++ b/src/app/race-boxes/standings-box/standings-box.component.html
@@ -9,7 +9,7 @@
               </ng-container> -->
 
             <ng-container matColumnDef="position">
-                <th mat-header-cell *matHeaderCellDef> Position </th>
+                <th mat-header-cell *matHeaderCellDef> P </th>
                 <td mat-cell *matCellDef="let element"> {{element.position}} </td>
               </ng-container>
 
