--- a/src/app/standings/standings.component.scss
+++ b/src/app/standings/standings.component.scss
@@ -7,6 +7,17 @@
     }
 }
 
-.standingsBox {
+.standingsBox ::ng-deep .standingsCard {
     margin: 2rem;
 }
+
+.standingsHeader {
+    margin-top: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+.optionT {
+    margin-bottom: 1rem;
+}
+
