--- a/src/theme.scss
+++ b/src/theme.scss
@@ -69,11 +69,11 @@ $mat-typography: mat.define-typography-config(
  $headline-3: mat.define-typography-level($font-size: 48px, $font-weight: 700, $font-family: Rubik),
  $headline-4: mat.define-typography-level($font-size: 34px, $font-weight: 700, $font-family: Rubik),
  $headline-5: mat.define-typography-level($font-size: 24px, $font-weight: 700, $font-family: Rubik),
- $headline-6: mat.define-typography-level($font-size: 20px, $font-weight: 700, $font-family: Rubik),
- $subtitle-1: mat.define-typography-level($font-size: 18px, $font-weight: 500, $font-family: Rubik),
- $subtitle-2: mat.define-typography-level($font-size: 20px, $font-weight: 500, $font-family: Rubik),
- $body-1: mat.define-typography-level($font-size: 14px, $font-weight: 400, $font-family: Rubik),
- $body-2: mat.define-typography-level($font-size: 16px, $font-weight: 400, $font-family: Rubik),
+ $headline-6: mat.define-typography-level($font-size: 1.25rem, $font-weight: 700, $font-family: Rubik),
+ $subtitle-1: mat.define-typography-level($font-size: 1.125rem, $font-weight: 700, $font-family: Rubik),
+ $subtitle-2: mat.define-typography-level($font-size: 1rem, $font-weight: 700, $font-family: Rubik),
+ $body-1: mat.define-typography-level($font-size: 0.75rem, $font-weight: 400, $font-family: Rubik),
+ $body-2: mat.define-typography-level($font-size: 0.875rem, $font-weight: 400, $font-family: Rubik),
  $caption: mat.define-typography-level($font-size: 14px, $font-weight: Medium, $font-family: Rubik),
  $button: mat.define-typography-level($font-size: 14px, $font-weight: 500, $font-family: Rubik),
  $overline: mat.define-typography-level($font-size: inherit, $line-height: 1.125, $font-weight: 500, $font-family: Rubik),                 
