--- a/src/app/standings/all-standings/all-standings.component.html
+++ b/src/app/standings/all-standings/all-standings.component.html
@@ -1,36 +1,42 @@
-<mat-card class="standingsCard">
-    <mat-card-header>
-        <mat-card-title> {{standings}} Standings!</mat-card-title>
-        <mat-card-subtitle> {{season}} </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="seasonStandings">
-          <table mat-table class="mat-table" [dataSource]="dataSource">
-              <!-- <ng-container matColumnDef="teamBadge">
-                  <th mat-header-cell *matHeaderCellDef></th>
-                  <td mat-cell *matCellDef="let element"> {{element}} </td>
-                </ng-container> -->
-  
-              <ng-container matColumnDef="position">
-                  <th mat-header-cell *matHeaderCellDef> Position </th>
-                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-                </ng-container>
-  
-                <ng-container matColumnDef="name">
-                  <th mat-header-cell *matHeaderCellDef justify="center"> {{standings}} </th>
-                  <td mat-cell *matCellDef="let element" >
-                     <div *ngIf="standings==='Driver'">{{element.Driver?.familyName}}</div>
-                     <div *ngIf="standings==='Constructor'">{{element.Constructor?.name}}</div>
-                  </td>
-                </ng-container>
-  
-                <ng-container matColumnDef="points">
-                  <th mat-header-cell *matHeaderCellDef> Points </th>
-                  <td mat-cell *matCellDef="let element"> {{element.points}} </td>
-                </ng-container>
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-      </div>
-    </mat-card-content>
-    </mat-card>
+<div *ngIf="spinnerService.visibility | async" class="spinner">
+  <mat-spinner></mat-spinner>
+</div>
+
+<div [hidden]="spinnerService.visibility| async" >
+  <mat-card class="standingsCard">
+      <mat-card-header>
+          <mat-card-title> {{standings}} Standings!</mat-card-title>
+          <mat-card-subtitle> {{season}} </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="seasonStandings">
+            <table mat-table class="mat-table" [dataSource]="dataSource">
+                <!-- <ng-container matColumnDef="teamBadge">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let element"> {{element}} </td>
+                  </ng-container> -->
+    
+                <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef> Position </th>
+                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                  </ng-container>
+    
+                  <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef justify="center"> {{standings}} </th>
+                    <td mat-cell *matCellDef="let element" >
+                      <div *ngIf="standings==='Driver'">{{element.Driver?.familyName}}</div>
+                      <div *ngIf="standings==='Constructor'">{{element.Constructor?.name}}</div>
+                    </td>
+                  </ng-container>
+    
+                  <ng-container matColumnDef="points">
+                    <th mat-header-cell *matHeaderCellDef> Points </th>
+                    <td mat-cell *matCellDef="let element"> {{element.points}} </td>
+                  </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+      </mat-card-content>
+  </mat-card>
+</div>
