--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,11 @@
     justify-content: center;
     width: 100%;
 }
+
+.spinner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8rem;
+}
 body { margin: 0; }
